--- a/index.html
+++ b/index.html
@@ -4,34 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Test</title>
+    <title>Lakeside Resort Properties</title>
+   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+     <link rel="stylesheet" href="style.css">
+     <script src="https://use.fontawesome.com/c1038005c8.js"></script>
 </head>
 <body ng-controller="controller">
-    {{broken}}
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+
+ <img class="rounded mx-auto d-block" src="LOGO-01.jpg" style="width: 15%;">
+
+      
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded ">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">Navbar</a>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  
+  <div class="collapse navbar-collapse justify-content-center"   id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item ">
+        <a class="nav-link" href="#">Sample Pages<i class="fa fa-angle-down" aria-hidden="true"></i> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Specials <i class="fa fa-angle-down" aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="#">Guest Services</a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Area Guide</a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Condos For Sale</a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
       </li>
     </ul>
   </div>
 </nav>
+ <div class="top-breadcrumbs">
+    <a>Home</a>
+    <a>All Rentals</a>
+    <a>Huntsville, Utah</a>
+    <p class="crumb-final">crumb-finalLakeside Unit 40 | 2 Bed</p>
 
+  </div>
+  <div class="main-wrapper"><img class="jumbo" src="jumbo.jpeg">
+    <h2>Availability</h2>
+    <div class="month-calendar">
+      <table>
+        <tr>
+          <th>August 2017</th>
+        </tr>
+        <tr>
+          <th>MOn</th>
+          <th>Tue</th>
+          <th>Wed</th>
+        </tr>
+
+      </table>
+
+    </div>
+    <div class="booking-selector">
+      test<i class="fa fa-calendar" aria-hidden="true"></i>
+    </div>
+  </div>
+  <footer>
+    <div class="footer">
+      <div>
+        <h3>Lakeside Resort Properties</h3>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+
+      </div>
+      <div>
+        <h3>Skiing & Resorts</h3>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </div>
+      <div>
+        <h3>Area</h3>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </div>
+      <div>
+        <h3>Contact</h3>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </div>
+    </div>
+   <p>All right reserved</p>
+  </footer>
 
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular.js"></script>
     <!-- bootstrap ui -->
